<resources>
    <string name="app_name">taxibedrijf</string>
    <string name="kenteken_input_placeholder">Voer kenteken in..</string>
    <string name="kenteken_submit_button">Zoeken</string>
    <string name="kenteken_result_text">Kenteken: %1$s</string>
    <string name="car_details_heading">Auto details:</string>
    <string name="car_details_kenteken">Kenteken: %1$s</string>
    <string name="car_details_merk">Merk: %1$s</string>
    <string name="car_details_voertuigsoort">Voertuigsoort: %1$s</string>
    <string name="car_details_kleur">Kleur: %1$s</string>
    <string name="car_details_aantal_zitplaatsen">Aantal zitplaatsen: %1$s</string>
    <string name="car_details_aantal_cilinders">Aantal cilinders: %1$s</string>
    <string name="car_details_cilinderinhoud">Cilinderinhoud: %1$s</string>
</resources>